// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a.js - flow-verify: a.js 1`] = `
// @flow
var a: string = 0;
module.exports = a;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow
var a: string = 0;
module.exports = a;

`;

exports[`b.js - flow-verify: b.js 1`] = `
// @flow
var a = require('./a');
var b: number = a;
module.exports = b;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow
var a = require("./a");
var b: number = a;
module.exports = b;

`;

exports[`c.js - flow-verify: c.js 1`] = `
// @flow
var b = require('./b');
var c: string = b;
module.exports = c;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow
var b = require("./b");
var c: string = b;
module.exports = c;

`;

exports[`dupe1.js - flow-verify: dupe1.js 1`] = `
/**
 * Dupe provider 1/2
 * @providesModule Dupe
 * @flow
 */
module.exports = "dupe1";
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/**
 * Dupe provider 1/2
 * @providesModule Dupe
 * @flow
 */
module.exports = "dupe1";

`;

exports[`dupe2.js - flow-verify: dupe2.js 1`] = `
/**
 * Dupe provider 2/2
 * @providesModule Dupe
 * @flow
 */
module.exports = "dupe2";
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/**
 * Dupe provider 2/2
 * @providesModule Dupe
 * @flow
 */
module.exports = "dupe2";

`;

exports[`requires_dupe.js - flow-verify: requires_dupe.js 1`] = `
/**
 * depends on doubly-provided module
 * @flow
 */
var dupe = require('Dupe');
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/**
 * depends on doubly-provided module
 * @flow
 */
var dupe = require("Dupe");

`;

exports[`requires_unchecked.js - flow-verify: requires_unchecked.js 1`] = `
/**
 * depends on an unchecked module, which will be deleted
 * @flow
 */
var unchecked = require('Unchecked');
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/**
 * depends on an unchecked module, which will be deleted
 * @flow
 */
var unchecked = require("Unchecked");

`;

exports[`unchecked.js - flow-verify: unchecked.js 1`] = `
/**
 * Not a flow module.
 * @providesModule Unchecked
 */
module.exports = "unchecked";
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/**
 * Not a flow module.
 * @providesModule Unchecked
 */
module.exports = "unchecked";

`;
